--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,69 @@
 <!doctype html>
 <html>
 <head>
-  <title>My Page Title</title>
-  <link rel="stylesheet" href="/css/site.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--Footer-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/stylesheet.css">
+      <nav class="navbar navbar-inverse" class="container">
+          <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+              <a class="navbar-brand" href="index.html">Travel Blog</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index2.html">About Me</a></li>
+                <li><a href="index3.html">Library</a></li>
+              </ul>
+            </div>
+          </div>
+      </nav>
 </head>
-<body>
-<p>Your content goes here.</p>
+<body class="container">
+  <div class="banner">
+    <a href="images/Paris.jpg"><image class="banner-image img-thumbnail" src="images/Paris.jpg" alt="John Fannin, Paris"></a>
+  </div>
+  <div class="jumbotron">
+  <h1 class="display-3">Hello, world!</h1>
+  <hr class="my-2">
+  <p>Welcome to my travel blog! </p>
+  <p>Follow my journey as I navigate and maneuver around the world while adding on to my reading list along the way!</p>
+  <br>
+  <br>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="index2.html" role="button">About Me</a>
+    <a class="btn btn-primary btn-lg" href="index3.html" role="button">Library</a>
+  </p>
+  </div>
 </body>
+
+<footer>
+  <div class="container text-center">
+  <a href="https://www.facebook.com/jfannin316" class="fa fa-facebook"></a>
+  <a href="https://twitter.com/johnbfannin" class="fa fa-twitter"></a>
+  <a href="https://www.instagram.com/johnfannin/" class="fa fa-instagram"></a>
+  <a href="https://www.linkedin.com/in/johnbfannin/" class="fa fa-linkedin"></a>
+<br>
+  <div class="footer">
+    <p>Contributions:<p>
+    <p>
+        <a class="website" href="https://getbootstrap.com/docs/4.3/getting-started/introduction/">Bootstrap</a> |
+        <a class="website" href="https://www.w3schools.com/howto/howto_css_social_media_buttons.asp">w3Schools</a> |
+        <a class="website" href="https://unsplash.com">UnSplash</a>
+    </p>
+  </div>
+  </div>
+</footer>
 </html>
