--- a/app/public/index2.html
+++ b/app/public/index2.html
@@ -37,24 +37,33 @@
   <div class="banner">
     <a href="images/ian-dooley-3NCA3tbaE5I-unsplash.jpg"><image class="banner-image img-thumbnail" src="images/ian-dooley-3NCA3tbaE5I-unsplash.jpg" alt="Ian Dooley, Unsplash"></a>
   </div>
+
   <div class="row">
-      <div class="col-xs-6">
-        <a href="images/London-Coconut.jpg"><image src="images/London-Coconut.jpg" id="london" class="img-thumbnail"></a>
-      </div>
-      <div class="col-xs-6">
-        <h4>Full Name: John Benedict B. Fannin</h4>
-        <h4>Country of Origin: Philippines</h4>
+      <div id="randomuser">
+        <center>
+        <a :href=users.picture.large><image :src=users.picture.large id="london" class="img-thumbnail"></a>
+
+        <h4>
+          Name: {{users.name.first}} {{users.name.last}}
+        </h4>
+        <h4>Country of Origin: {{users.nat}}</h4>
         <h4>Country of Residence: United States of America</h4>
-        <h4>Birthdate: March 16, 1996</h4>
-        <h4>Age: 23</h4>
+        <h4>Birthdate: {{users.dob.date}}</h4>
+        <h4>Age: {{users.dob.age}}</h4>
         <br>
         <br>
-        <a class="btn btn-primary btn-lg" href="mailto:jbfannin@iu.edu?subject=feedback" role="button">Email Me!</a>
+        <h4>Email Me!</h4>
+          <a class="btn btn-primary btn-lg" href="mailto:someone@example.com?Subject=Hello%20again" target="_top" role="button">
+            {{users.email}}</a>
+      </center>
+
       </div>
   </div>
     <p>
     </p>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="js/randomuser.js"></script>
 </body>
 
 <footer>
